--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_ENV=local
 APP_URL=http://localhost
 APP_HOST=127.0.0.1
 APP_PORT=8080
+# GIN_MODE=debug
 
 # Config Database
 DB_CONNECTION=mysql
