update config env

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ DB_PORT=3306
 DB_DATABASE=db_digitalent_final_project
 DB_USERNAME=root
 DB_PASSWORD=
+
+# Config Frontend
+FRONTEND_URL=http://localhost
+FRONTEND_HOST=127.0.0.1
+FRONTEND_PORT=5173
+FRONTEND_FULL_HOST_PORT=http://localhost:5173
